added categories filter on the get items
